--- a/src/components/header.css
+++ b/src/components/header.css
@@ -3,9 +3,15 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  transition-duration: 500ms;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 5;
 }
 
 #hamburger-container {
   margin-bottom: -1px;
+}
+
+header .md-title {
+  cursor: pointer;
 }
