--- a/src/scenes/home.css
+++ b/src/scenes/home.css
@@ -1,3 +1,10 @@
 #home {
-  padding: 15px;
+}
+
+.home-board-container {
+}
+
+#home .search-container {
+  padding-left: 15px;
+  padding-right: 15px;
 }
