--- a/src/scenes/threads.css
+++ b/src/scenes/threads.css
@@ -1,3 +1,14 @@
-#threads {
-  margin-top: -1px;
+#pagination {
+  text-align: center;
+  padding-bottom: 24px;
+  margin-left: -8px;
+  margin-right: -8px;
+}
+
+#pagination > span.back {
+  float: left;
+}
+
+#pagination > span.next {
+  float: right;
 }
