--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,11 @@
 #x-app {
   position: relative;
-  min-height: 100vh;
+  min-height: calc(100vh + 1px);
+}
+
+#-app * {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 body,
